--- a/requirements.txt
+++ b/requirements.txt
@@ -7,19 +7,20 @@
 
 -i https://pypi.org/simple
 aniso8601==9.0.1
-click==8.0.2; python_version >= '3.6'
+click==8.0.3; python_version >= '3.6'
 dataclasses==0.8; python_version < '3.7'
 dnspython==2.1.0
+flask-cors==3.0.10
 flask-restful==0.3.9
 flask==2.0.2
 gunicorn==20.1.0
-importlib-metadata==4.8.1; python_version < '3.8'
+importlib-metadata==4.8.3; python_version < '3.8'
 itsdangerous==2.0.1; python_version >= '3.6'
-jinja2==3.0.2; python_version >= '3.6'
+jinja2==3.0.3; python_version >= '3.6'
 markupsafe==2.0.1; python_version >= '3.6'
-pymongo==3.12.0
+pymongo==4.0.1
 pytz==2021.3
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-typing-extensions==3.10.0.2; python_version < '3.8'
+typing-extensions==4.0.1; python_version < '3.8'
 werkzeug==2.0.2; python_version >= '3.6'
 zipp==3.6.0; python_version >= '3.6'
